# ADM

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml
awsdockermanager/: __init__.py  advisor.py  cli.py  dockerctl.py  snapshot.py  systeminfo.py  tui.py
scripts/: install-aws.sh
tests/: test_scanner.py
